--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -88,9 +88,9 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	&__column {
-		margin-bottom: 50px;
+		// margin-bottom: 50px;
 		@include r(1200) {
-			margin-bottom: 0px;
+			margin-bottom: 30px;
 			width: 100%;
 		}
 		&--1 {
