--- a/src/styles/base/_lk-ui.scss
+++ b/src/styles/base/_lk-ui.scss
@@ -281,3 +281,150 @@
 		}
 	}
 }
+
+.lk-company {
+	&__header {
+		background-color: #F9F9F9;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 1.2;
+		padding: 13px 16px;
+		margin-bottom: 32px;
+	}
+	&__grid {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	&__column {
+		width: calc(100% / 3);
+		margin-bottom: 48px;
+	}
+	&__title {
+		margin-bottom: 40px;
+	}
+	&__info-block {
+		margin-bottom: 16px;
+	}
+	&__name {
+		color: #828282;
+	}
+	&__text {
+
+	}
+}
+
+.lk-question {
+	background-color: $light;
+	box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.14);
+	padding: 27px 34px;
+	&__title {
+		margin-bottom: 34px;
+		font-weight: 500;
+	}
+	&__list {
+		margin-bottom: 28px;
+	}
+	&__btn {
+		padding-left: 38px;
+		padding-right: 38px;
+	}
+}
+
+.lk-progress {
+	background-color: $green;
+	padding: 20px 29px 34px 29px;
+	margin-bottom: 48px;
+	&__title {
+		text-transform: uppercase;
+		font-weight: bold;
+		margin-bottom: 23px;
+		font-size: 20px;
+		strong {
+			color: $light;
+		}
+	}
+	&__text {
+		margin-bottom: 48px;
+	}
+	&__img {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+}
+
+.lk-catalog {
+	padding-top: 40px;
+	&__grid {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+}
+
+.lk-table-section {
+	&__title {
+		font-weight: bold;
+		font-size: 30px;
+		margin-bottom: 26px;
+	}
+	&__table {
+		margin-bottom: 32px;
+	}
+	&__toolbar {
+		display: flex;
+		justify-content: flex-end;
+	}
+}
+
+.lk-checkbox {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	&__input {
+		display: none;
+		&:checked {
+			& + .lk-checkbox__icon {
+				background-color: $black;
+				svg {
+					opacity: 1;
+				}
+			}
+		}
+	}
+	&__icon {
+		flex-shrink: 0;
+		height: 16px;
+		width: 16px;
+		transition: 0.3s all;
+		position: relative;
+		background-color: $light;
+		border: 1px solid $dark;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		svg {
+			width: 12px;
+			height: 12px;
+			display: block;
+			opacity: 0;
+			transition: 0.3s all;
+		}
+	}
+}
+
+.lk-table {
+	border: 1px solid #E5E5E5;
+	&__line {
+		padding: 14px 20px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		&--head {
+			background-color: #F9F9F9;
+		}
+	}
+	&__btn {
+		margin-right: 45px;
+	}
+}
