--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -633,3 +633,30 @@
 		font-family: $font-main;
 	}
 }
+
+.photo-input {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border: 1px dashed #E5E5E5;
+	padding: 26px 30px 82px 30px;
+	cursor: pointer;
+	transition: 0.3s all;
+	&:hover {
+		opacity: 0.7;
+	}
+	&__title {
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	&__icon {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		height: 40px;
+		width: 40px;
+	}
+	input {
+		display: none;
+	}
+}
