--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -80,10 +80,11 @@
                                 </div>
                             </div>
                             <div class="catalog__articles articles">
+
                                 <article class="card">
                                     <a href class="resized card__thumb">
                                         <div class="card__tags"></div>
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -91,7 +92,7 @@
                                     <div class="card__content">
                                         <div class="card__grid">
                                             <div class="card__grid-column">
-                                                <div class="card__grid-item">
+                                                <div class="card__grid-item card__grid-item--code">
                                                     <p class="card__grid-head">
                                                         артикул
                                                     </p>
@@ -99,7 +100,7 @@
                                                         45645
                                                     </p>
                                                 </div>
-                                                <div class="card__grid-item">
+                                                <div class="card__grid-item card__grid-item--availability">
                                                     <p class="card__grid-head">
                                                         наличие
                                                     </p>
@@ -110,15 +111,15 @@
                                             </div>
                                             
                                             <div class="card__grid-column">
-                                                <div class="card__grid-item">
+                                                <div class="card__grid-item card__grid-item--full-price">
                                                     <p class="card__grid-head">
                                                         розничная цена
                                                     </p>
-                                                    <p class="card__grid-text">
-                                                        5 550 РУБ.
+                                                    <p class="card__grid-text card__grid-text--price">
+                                                        <strong>5 550</strong> РУБ.
                                                     </p>
                                                 </div>
-                                                <div class="card__grid-item">
+                                                <div class="card__grid-item card__grid-item--sale-price">
                                                     <p class="card__grid-head">
                                                         цена со скидкой
                                                     </p>
@@ -127,7 +128,9 @@
                                                     </p>
                                                 </div>
                                             </div>
-
+                                        </div>
+                                        <div class="card__mob-toolbar">
+                                            
                                         </div>
                                     </div>
                                     <div class="card__toolbar">
@@ -164,7 +167,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
                                                 Новинка
@@ -201,7 +204,7 @@
                                                         розничная цена
                                                     </p>
                                                     <p class="card__grid-text">
-                                                        5 550 РУБ.
+                                                        <strong>5 550</strong> Руб.
                                                     </p>
                                                 </div>
                                                 <div class="card__grid-item">
@@ -250,7 +253,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
                                                 Акция
@@ -336,7 +339,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
                                                 Распродажа
@@ -422,7 +425,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -503,7 +506,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
                                                 Акция
@@ -589,7 +592,7 @@
 
                                 <article class="card">
                                     <a href class="resized card__thumb">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
                                                 Распродажа
