--- a/src/views/44-page.html
+++ b/src/views/44-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>46. Оплата</title>
+    <title>45. Оплата</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -40,16 +40,17 @@
                             </div>
                             <div class="single__column single__column--10">
                                 <h2 class="title single__title">
-                                    Заказ оформлен
+                                    Оплата
                                 </h2>
                                 <div class="text single__text">
                                     <p>
-                                        Спасибо, мы получили вашу оплату за заказ <a href="">№ 452214</a> <br>
-                                        Мы можете следить за статусом заказа в личном кабинете, а так же получить информацию о нем по телефону <b>+7 (4012) 777-001</b>
+                                        Для оплаты заказа <a href="">№ 452214</a> нажмите “Продолжить” и вас перенаправит на страницу оплаты.
                                     </p>
+                                    <a href="" class="btn btn--dark">
+                                        Продолжить
+                                    </a>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
