--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -4590,6 +4590,94 @@ img.mfp-img {
   cursor: pointer;
 }
 
+.tippy-box[data-animation=fade][data-state=hidden] {
+  opacity: 0;
+}
+
+[data-tippy-root] {
+  max-width: calc(100vw - 10px);
+}
+
+.tippy-box {
+  position: relative;
+  background-color: #333;
+  color: #fff;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.4;
+  outline: 0;
+  transition-property: transform,visibility,opacity;
+}
+
+.tippy-box[data-placement^=top] > .tippy-arrow {
+  bottom: 0;
+}
+
+.tippy-box[data-placement^=top] > .tippy-arrow:before {
+  bottom: -7px;
+  left: 0;
+  border-width: 8px 8px 0;
+  border-top-color: initial;
+  transform-origin: center top;
+}
+
+.tippy-box[data-placement^=bottom] > .tippy-arrow {
+  top: 0;
+}
+
+.tippy-box[data-placement^=bottom] > .tippy-arrow:before {
+  top: -7px;
+  left: 0;
+  border-width: 0 8px 8px;
+  border-bottom-color: initial;
+  transform-origin: center bottom;
+}
+
+.tippy-box[data-placement^=left] > .tippy-arrow {
+  right: 0;
+}
+
+.tippy-box[data-placement^=left] > .tippy-arrow:before {
+  border-width: 8px 0 8px 8px;
+  border-left-color: initial;
+  right: -7px;
+  transform-origin: center left;
+}
+
+.tippy-box[data-placement^=right] > .tippy-arrow {
+  left: 0;
+}
+
+.tippy-box[data-placement^=right] > .tippy-arrow:before {
+  left: -7px;
+  border-width: 8px 8px 8px 0;
+  border-right-color: initial;
+  transform-origin: center right;
+}
+
+.tippy-box[data-inertia][data-state=visible] {
+  transition-timing-function: cubic-bezier(0.54, 1.5, 0.38, 1.11);
+}
+
+.tippy-arrow {
+  width: 16px;
+  height: 16px;
+  color: #333;
+}
+
+.tippy-arrow:before {
+  content: "";
+  position: absolute;
+  border-color: transparent;
+  border-style: solid;
+}
+
+.tippy-content {
+  position: relative;
+  padding: 5px 9px;
+  z-index: 1;
+}
+
 svg,
 a {
   transition: 0.3s all;
@@ -5890,6 +5978,14 @@ i {
   flex-wrap: wrap;
 }
 
+.lk-table-section {
+  margin-bottom: 40px;
+}
+
+.lk-table-section:last-of-type {
+  margin-bottom: 0px;
+}
+
 .lk-table-section__title {
   font-weight: bold;
   font-size: 30px;
@@ -5902,13 +5998,16 @@ i {
 
 .lk-table-section__toolbar {
   display: flex;
+}
+
+.lk-table-section__toolbar--right {
   justify-content: flex-end;
 }
 
 .lk-checkbox {
   display: flex;
   align-items: center;
-  width: 100%;
+  cursor: pointer;
 }
 
 .lk-checkbox__input {
@@ -5957,10 +6056,269 @@ i {
 
 .lk-table__line--head {
   background-color: #F9F9F9;
+  justify-content: flex-start;
 }
 
 .lk-table__btn {
   margin-right: 45px;
+}
+
+.select-all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #828282;
+  padding-left: 16px;
+  padding-right: 16px;
+  height: 40px;
+  cursor: pointer;
+  transition: 0.3s all;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: inherit;
+}
+
+.select-all:hover {
+  opacity: 0.7;
+}
+
+.remove-all {
+  display: flex;
+  align-items: center;
+  color: #EB5757;
+  cursor: pointer;
+  transition: 0.3s all;
+  padding-right: 16px;
+  background-color: inherit;
+}
+
+.remove-all:hover {
+  opacity: 0.7;
+}
+
+.remove-all__icon {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  margin-right: 15px;
+}
+
+.remove-all__text {
+  flex-shrink: 0;
+}
+
+.lk-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  background-color: #ffffff;
+  border-bottom: 1px solid #E5E5E5;
+}
+
+.lk-item__col {
+  flex-shrink: 0;
+}
+
+.lk-item__col--checkbox {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #E5E5E5;
+}
+
+.lk-item__col--number {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lk-item__col--thumb {
+  display: flex;
+  align-items: center;
+}
+
+.lk-item__col--content {
+  min-width: 0px;
+  flex-grow: 1;
+  padding: 16px 32px;
+  flex-shrink: 1;
+}
+
+.lk-item__col--count {
+  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+}
+
+.lk-item__col--result {
+  width: 220px;
+  padding: 16px 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.lk-item__thumb {
+  width: 106px;
+  height: 106px;
+  flex-shrink: 0;
+}
+
+.lk-item__thumb img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+.lk-item__text--accent {
+  color: #00C25A;
+}
+
+.lk-item__text a {
+  color: #2E2E2E;
+}
+
+.lk-item__text a:hover {
+  text-decoration: none;
+}
+
+.lk-item__text strong {
+  color: #828282;
+}
+
+.lk-item__text b {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.lk-item__text s {
+  color: #828282;
+}
+
+.lk-item__count {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.lk-item__count b {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.lk-table-toolbar {
+  display: flex;
+}
+
+.lk-table-toolbar--head {
+  background-color: #F9F9F9;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  align-items: center;
+  border-bottom: 1px solid #E5E5E5;
+}
+
+.lk-table-toolbar--footer {
+  background-color: #ffffff;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  align-items: stretch;
+}
+
+.lk-table-toolbar__col {
+  flex-shrink: 0;
+}
+
+.lk-table-toolbar__col--checkbox {
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lk-table-toolbar__col--all {
+  width: 166px;
+}
+
+.lk-table-toolbar__col--grow {
+  flex-grow: 1;
+  min-width: 0px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.lk-table-toolbar__col--footer-grow {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
+  min-width: 0px;
+  padding: 16px 32px;
+}
+
+.lk-table-toolbar__col--repair {
+  padding: 16px 32px;
+  width: 220px;
+}
+
+.lk-table-toolbar__col--removed {
+  padding: 16px 32px;
+  width: 300px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.lk-table-toolbar__col--result {
+  padding: 16px 32px;
+  width: 220px;
+  display: block;
+}
+
+.lk-table-toolbar__repair-btn {
+  color: #00C25A;
+  text-decoration: underline;
+  height: 40px;
+  cursor: pointer;
+  background: none;
+  transition: 0.3s all;
+}
+
+.lk-table-toolbar__repair-btn:hover {
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+.lk-table-toolbar__text--accent {
+  color: #00C25A;
+}
+
+.lk-table-toolbar__text strong {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.lk-table-toolbar__status {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.lk-table-toolbar__status--red {
+  color: #FF3131;
+}
+
+.lk-table-toolbar__status--yellow {
+  color: #F2994A;
+}
+
+.lk-table-toolbar__status--green {
+  color: #00C25A;
 }
 
 .accent-line {
@@ -8702,11 +9060,6 @@ i {
   width: 50%;
 }
 
-.card__grid-column:last-child {
-  padding-left: 15px;
-  border-left: 1px solid #E5E5E5;
-}
-
 .card__grid-item {
   min-height: 50px;
 }
@@ -8735,6 +9088,10 @@ i {
 .card__grid-text--price strong {
   font-weight: bold;
   font-size: 20px;
+}
+
+.card__mob-toolbar {
+  display: none;
 }
 
 .card__btn {
@@ -9084,6 +9441,44 @@ i {
   opacity: 0.5;
 }
 
+.map__object {
+  position: relative;
+}
+
+.map__object div {
+  height: 40px;
+  width: 40px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.wow-star {
+  display: inline-block;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  fill: #ffff00;
+  fill-opacity: 1;
+  stroke: #000000;
+  stroke-width: 4;
+}
+
+.wow-star__title {
+  color: blue;
+  margin: 25% auto 5% auto;
+  text-align: center;
+}
+
+.wow-star__image {
+  margin: 0 25%;
+  width: 50%;
+}
+
 .map-hidden {
   display: none;
 }
@@ -9418,6 +9813,82 @@ path {
     font-size: 14px;
   }
 
+  .lk-item__col--checkbox {
+    width: 40px;
+  }
+
+  .lk-item__col--number {
+    width: 45px;
+  }
+
+  .lk-item__col--content {
+    padding: 16px 16px;
+  }
+
+  .lk-item__col--count {
+    padding: 16px 16px;
+    width: 220px;
+  }
+
+  .lk-item__col--result {
+    padding: 16px 16px;
+    width: 200px;
+  }
+
+  .lk-item__text b {
+    font-size: 18px;
+  }
+
+  .lk-item__count b {
+    font-size: 18px;
+  }
+
+  .lk-table-toolbar--head {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .lk-table-toolbar--footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .lk-table-toolbar__col--checkbox {
+    width: 40px;
+  }
+
+  .lk-table-toolbar__col--all {
+    width: 151px;
+  }
+
+  .lk-table-toolbar__col--grow {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-table-toolbar__col--footer-grow {
+    padding: 16px;
+  }
+
+  .lk-table-toolbar__col--repair {
+    width: 200px;
+    padding: 16px;
+  }
+
+  .lk-table-toolbar__col--removed {
+    width: 220px;
+    padding: 16px;
+  }
+
+  .lk-table-toolbar__col--result {
+    padding: 16px;
+    width: 200px;
+  }
+
+  .lk-table-toolbar__text strong {
+    font-size: 18px;
+  }
+
   .accent-line {
     font-size: 16px;
     padding-top: 13px;
@@ -9634,6 +10105,10 @@ path {
 }
 
 @media only screen and (max-width: 1200px) {
+  .body {
+    background: none;
+  }
+
   .grid__column {
     margin-bottom: 0px;
     width: 100%;
@@ -10375,7 +10850,69 @@ path {
   }
 
   .card {
-    width: calc(50% - 10px);
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .card__thumb {
+    width: 70px;
+    height: 70px;
+    order: -8;
+    margin-right: 16px;
+    flex-shrink: 0;
+  }
+
+  .card__tags {
+    display: none;
+  }
+
+  .card__title {
+    order: -9;
+    width: 100%;
+  }
+
+  .card__counter {
+    display: none;
+  }
+
+  .card__grid {
+    display: block;
+  }
+
+  .card__grid-column {
+    width: 100%;
+  }
+
+  .card__grid-column:last-child {
+    padding-left: 0px;
+    border-left: 0px;
+  }
+
+  .card__grid-item {
+    min-height: 0px;
+    margin-bottom: 0px;
+  }
+
+  .card__grid-item--code {
+    display: none;
+  }
+
+  .card__grid-item--sale-price {
+    display: none;
+  }
+
+  .card__grid-head {
+    display: inline-block;
+  }
+
+  .card__grid-text {
+    display: inline-block;
+  }
+
+  .card__mob-toolbar {
+    display: flex;
+    width: 100%;
   }
 
   .service__column {
@@ -10626,12 +11163,6 @@ path {
 
   .fancybox-thumbs__list a {
     max-width: calc(100% - 10px);
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  .card {
-    width: 100%;
   }
 }
 
