--- a/src/blocks/modules/map/map.scss
+++ b/src/blocks/modules/map/map.scss
@@ -174,6 +174,37 @@
 			opacity: 0.5;
 		}
 	}
+	&__object {
+		position: relative;
+		div {
+			height: 40px;
+			width: 40px;
+			background-color: red;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+		}
+	}
+}
+
+.wow-star {
+	display: inline-block;
+	margin: auto;
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	fill:#ffff00;
+	fill-opacity:1;
+	stroke:#000000;
+	stroke-width:4;
+}
+.wow-star__title {
+	color: blue;
+	margin: 25% auto 5% auto;
+	text-align: center;
+}
+.wow-star__image {
+	margin: 0 25%;
+	width: 50%;
 }
 
 .map-hidden {
@@ -181,9 +212,9 @@
 }
 
 path{
-    fill:none;
-    stroke:black;
-    pointer-events:all;
+	fill:none;
+	stroke:black;
+	pointer-events:all;
 }
 
 .nav-check {
