--- a/src/views/39-page.html
+++ b/src/views/39-page.html
@@ -1,128 +1,200 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>39. Заказы</title>
-    @@include("../blocks/modules/head/head.html")
+	<title>39. Заказы</title>
+	@@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    <div class="layout">
-        @@include("../blocks/modules/header/header.html")
-        <main class="layout__main">
-            @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            <section class="single">
-                <div class="container">
-                    <div class="single__content">
-                        <div class="single__columns">
-                            <div class="single__column single__column--2">
-                                <aside class="sidebar">
-                                    <p class="title-small sidebar__title">
-                                        <span>Личный кабинет</span>
-                                    </p>
-                                    <a href="" class="sidebar__link">
-                                        Корзина <strong>(3)</strong>
-                                    </a>
-                                    <a href="" class="sidebar__link sidebar__link--active">
-                                        Заказы
-                                    </a>
-                                    <a href="" class="sidebar__link">
-                                        Данные пользователя
-                                    </a>
-                                    <a href="" class="sidebar__link">
-                                        Организации
-                                    </a>
-                                    <a href="" class="sidebar__link">
-                                        Избранные товары
-                                    </a>
-                                    <a href="" class="sidebar__link">
-                                        Сообщения
-                                    </a>
-                                </aside>
-                            </div>
-                            <div class="single__column single__column--10">
-                                <h2 class="title single__title">
-                                    Заказы
-                                </h2>
-                                <div class="text single__text">
-                                    <p>
-                                        История «Балтламинат» насчитывает более 19 лет и все это время компания неуклонно идет вперед, постоянно расширяя свои возможности для клиентов и предлагая им самые качественные и современные услуги и товары по направлениям:
-                                    </p>
-                                    <ul>
-                                        <li>
-                                            <span>
-                                                плитный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромочный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельная фурнитура «премиум» и «стандарт» класса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                стулья и кресла для офиса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                ламинированные полы;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельные фасады;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                изготовление раздвижных дверей системы «купе»;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                услуги по обработке и изготовлению деталей мебели по индивидуальным размерам и эскизам. Выполняется комплекс работ: распил, 
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромкование. Распил (раскрой) прямолинейных и криволинейных деталей из ЛДСП, столешниц, стеновых панелей, ХДФ.
-                                            </span>
-                                        </li>
-                                    </ul>
-                                    <p>
-                                        Динамично развиваясь все 19 лет компания «Балтламинат» стала лидером на рынке товаров и услуг для производителей корпусной мебели в Калининградской области. 
-                                    </p>
-                                    <p>
-                                        Учитывая потребности производителей и современные тенденции мебельной индустрии, Компания постоянно предлагает клиентам качественные товары ведущих европейских производителей, позволяющие сохранять им лидерство на рынке.
-                                    </p>
-                                    <p>
-                                        Уникальность компании «Балтламинат» отражает наш девиз: «Все для производства мебели». Это означает, что материалы, фурнитура и производственные услуги сосредоточены в одном месте для удобства наших клиентов.
-                                    </p>
-                                    <p>
-                                        Особенностью также является то, что клиент «Балтламинат» может приобрести в компании не только фурнитуру и материалы для производства мебели, но и заказать изготовление отдельных деталей. Работы ведутся квалифицированными специалистами на высокотехнологичном оборудовании с использованием материалов известных мировых брендов.
-                                    </p>
-                                    <p>
-                                        «Балтламинат» специализируется на различных материалах для производства мебели. Компания предоставляет услуги по подготовке мебельных деталей к непосредственной сборке изделия: распил по вашим размерам и оклейка кромкой. Новейшее оборудование из Германии позволяет делать не только стандартные, но и необычные фигурные детали мебели по индивидуальным эскизам заказчика. Принесите размеры задуманного вами предмета интерьера и услуги компании Балтламинат позволят воплотить его в жизнь, а широкий ассортимент и наличие на складе столешниц, готовых фасадов, плитных материалов, кромочной ленты и самой разнообразной мебельной фурнитуры, а также стульев и ламината дают возможность реализовать задуманное в кратчайшие сроки.
-                                    </p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        @@include("../blocks/modules/footer/footer.html")
-        @@include("../blocks/modules/temp/temp.html")
-    </div>
-    <div class="hidden">
-        @@include("../blocks/modules/modal/modal.html")
-    </div>
-    <script src="js/vendor.js"></script>
-    <script src="js/main.js"></script>
+	<div class="layout">
+		@@include("../blocks/modules/header/header.html")
+		<main class="layout__main">
+			@@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
+			<section class="single">
+				<div class="container">
+					<div class="single__content">
+						<div class="single__columns">
+							<div class="single__column single__column--2">
+								<aside class="sidebar">
+									<p class="title-small sidebar__title">
+										<span>Личный кабинет</span>
+									</p>
+									<a href="" class="sidebar__link">
+										Корзина <strong>(3)</strong>
+									</a>
+									<a href="" class="sidebar__link sidebar__link--active">
+										Заказы
+									</a>
+									<a href="" class="sidebar__link">
+										Данные пользователя
+									</a>
+									<a href="" class="sidebar__link">
+										Организации
+									</a>
+									<a href="" class="sidebar__link">
+										Избранные товары
+									</a>
+									<a href="" class="sidebar__link">
+										Сообщения
+									</a>
+								</aside>
+							</div>
+							<div class="single__column single__column--10">
+								<h2 class="title single__title">
+									Заказы
+								</h2>
+								<div class="lk-filter">
+									<p class="lk-filter__text">
+										Период
+									</p>
+									<input class="lk-filter__datepicker" type="text" data-position="right top" style="background-image: url('img/calendar.svg')">
+									<select class="lk-dropdown">
+										<option value="1">Все заказы</option>
+										<option value="1">1023-219</option>
+										<option value="2">1023-220</option>
+										<option value="3">1023-221</option>
+									</select>
+								</div>
+								<div class="lk-orders">
+									<article class="lk-order">
+										<div class="lk-order__line lk-order__line--head">
+											<div class="lk-order__col lk-order__col--number">
+												1
+											</div>
+											<div class="lk-order__col lk-order__col--grow lk-order__col--info">
+												<p class="lk-order__head-text">
+													Заказ № <a href="">1023-219</a>
+												</p>
+											</div>
+										</div>
+										<div class="lk-order__line">
+											<div class="lk-order__col lk-order__col--grow lk-order__col--person">
+												<p class="lk-order__text">
+													<strong>Ответственный:</strong>
+													Лисицина Лидия Ивановна
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--date">
+												<p class="lk-order__text">
+													<strong>Дата:</strong>
+													<time>13.05.2020 10:02:25</time>
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--count">
+												<p class="lk-order__text">
+													<b>4</b> товара на сумму <b>4050</b> руб.
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--status">
+												<!-- <p class="lk-order__status lk-order__status--red">
+													Отменен
+												</p>
+												<p class="lk-order__status lk-order__status--yellow">
+													Обработка
+												</p> -->
+												<p class="lk-order__status lk-order__status--green">
+													Оплачен
+												</p>
+											</div>
+										</div>
+									</article>
+									<article class="lk-order">
+										<div class="lk-order__line lk-order__line--head">
+											<div class="lk-order__col lk-order__col--number">
+												1
+											</div>
+											<div class="lk-order__col lk-order__col--grow lk-order__col--info">
+												<p class="lk-order__head-text">
+													Заказ № <a href="">1023-219</a>
+												</p>
+											</div>
+										</div>
+										<div class="lk-order__line">
+											<div class="lk-order__col lk-order__col--grow lk-order__col--person">
+												<p class="lk-order__text">
+													<strong>Ответственный:</strong>
+													Лисицина Лидия Ивановна
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--date">
+												<p class="lk-order__text">
+													<strong>Дата:</strong>
+													<time>13.05.2020 10:02:25</time>
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--count">
+												<p class="lk-order__text">
+													<b>4</b> товара на сумму <b>4050</b> руб.
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--status">
+												<!-- <p class="lk-order__status lk-order__status--red">
+													Отменен
+												</p> -->
+												<p class="lk-order__status lk-order__status--yellow">
+													Обработка
+												</p>
+												<!-- <p class="lk-order__status lk-order__status--green">
+													Оплачен
+												</p> -->
+											</div>
+										</div>
+									</article>
+									<article class="lk-order">
+										<div class="lk-order__line lk-order__line--head">
+											<div class="lk-order__col lk-order__col--number">
+												1
+											</div>
+											<div class="lk-order__col lk-order__col--grow lk-order__col--info">
+												<p class="lk-order__head-text">
+													Заказ № <a href="">1023-219</a>
+												</p>
+											</div>
+										</div>
+										<div class="lk-order__line">
+											<div class="lk-order__col lk-order__col--grow lk-order__col--person">
+												<p class="lk-order__text">
+													<strong>Ответственный:</strong>
+													Лисицина Лидия Ивановна
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--date">
+												<p class="lk-order__text">
+													<strong>Дата:</strong>
+													<time>13.05.2020 10:02:25</time>
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--count">
+												<p class="lk-order__text">
+													<b>4</b> товара на сумму <b>4050</b> руб.
+												</p>
+											</div>
+											<div class="lk-order__col lk-order__col--status">
+												<p class="lk-order__status lk-order__status--red">
+													Отменен
+												</p>
+												<!-- <p class="lk-order__status lk-order__status--yellow">
+													Обработка
+												</p> -->
+												<!-- <p class="lk-order__status lk-order__status--green">
+													Оплачен
+												</p> -->
+											</div>
+										</div>
+									</article>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		@@include("../blocks/modules/footer/footer.html")
+		@@include("../blocks/modules/temp/temp.html")
+	</div>
+	<div class="hidden">
+		@@include("../blocks/modules/modal/modal.html")
+	</div>
+	<script src="js/vendor.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
