--- a/src/views/39-page.html
+++ b/src/views/39-page.html
@@ -53,6 +53,9 @@
 										<option value="2">1023-220</option>
 										<option value="3">1023-221</option>
 									</select>
+									<button class="lk-filter__btn btn btn--green">
+										Показать
+									</button>
 								</div>
 								<div class="lk-orders">
 									<article class="lk-order">
