--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -36,7 +36,8 @@
 	font-weight: bold;
 	transition: 0.3s all;
 	cursor: pointer;
-	text-transform: uppercase;
+	// text-transform: uppercase;
+	text-transform: capitalize;
 	@include r(1700) {
 
 	}
